@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.5.16
 Date: ???
+  Changes:
+    - Hid solid resin item and recipes #322
   Bugfixes:
     - Landfill tech not ignoring tech cost multiplier #320
     - Milestones error when mod setting Default landfill type set to Landfill #321
